<resources>
    <string name="app_name">Straight On Strait</string>
    <string name="trip">Trip</string>
    <string name="title_source_text_view">Source</string>
    <string name="summary_source_text_view">Location where the trip starts</string>
    <string name="title_destination_text_view">Destination</string>
    <string name="summary_destination_text_view">Location where the trip ends</string>
    <string name="settings">Settings</string>
    <string name="pref_key_origin">ORIGIN</string>
    <string name="pref_key_destination">DESTINATION</string>
    <string name="duration">Duration</string>
    <string name="transfers">Trf</string>
    <string name="walking">Walking</string>
    <string name="transports">Transports</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="direction">Direction</string>
    <string name="type">Type</string>
    <string name="journey">Journey</string>
    <string name="track">Track</string>
    <string name="transport_type_description">Transportation type</string>
</resources>
