<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:columnCount="3"
            android:useDefaultMargins="false"
            android:background="@color/Lavender">

    <LinearLayout
        android:layout_columnSpan="3"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/transport_type_image_view"
            android:contentDescription="@string/transport_type_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grid_margin"
            android:layout_gravity="center_vertical"
            android:background="@color/Lavender"/>
        <TextView
            android:id="@+id/type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grid_margin"
            android:layout_gravity="center_vertical"
            android:textColor="@color/Black"
            android:background="@color/SkyBlue"/>
        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grid_margin"
            android:layout_gravity="center_vertical"
            android:textColor="@color/White"
            android:background="@color/RedPurple"/>
        <TextView
            android:id="@+id/direction_text_view"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grid_margin"
            android:layout_gravity="left"
            android:background="@color/Lavender"/>
    </LinearLayout>

    <TextView
        android:text="@string/location"
        android:textSize="@dimen/small_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:text="@string/track"
        android:textSize="@dimen/small_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:text="@string/time"
        android:textSize="@dimen/small_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:id="@+id/origin_name_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_columnWeight="1"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:id="@+id/origin_track_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:id="@+id/origin_time_text_view"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginRight="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView/>

    <TextView
        android:id="@+id/origin_rt_track_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        android:textColor="@color/Red"
        />

    <TextView
        android:id="@+id/origin_rt_time_text_view"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginRight="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        android:textColor="@color/Red"
        />

    <TextView
        android:id="@+id/destination_name_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_columnWeight="1"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:id="@+id/destination_track_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView
        android:id="@+id/destination_time_text_view"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginRight="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        />

    <TextView/>

    <TextView
        android:id="@+id/destination_rt_track_text_view"
        android:textSize="@dimen/large_text_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        android:textColor="@color/Red"
        />

    <TextView
        android:id="@+id/destination_rt_time_text_view"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginRight="@dimen/grid_margin"
        android:layout_gravity="left"
        android:background="@color/Lavender"
        android:textColor="@color/Red"
        />

</GridLayout>